manifests/ecosystem/reference-grant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-gateway-${GATEWAY_NAMESPACE}
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: ${GATEWAY_NAMESPACE}
  to:
  - group: ""
    kind: Service
