manifests/ecosystem/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ${SERVER_NAME}
spec:
  parentRefs:
  - name: ${GATEWAY_NAME}
    namespace: ${GATEWAY_NAMESPACE}
    sectionName: ${SECTION_NAME}
  hostnames:
  - "${HOSTNAME}"
  rules:
  - backendRefs:
    - name: mcp-server
      port: 8080
